--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,17 @@
+* {
+	position: fixed;
+}
 body {
 	font-family: 'Quicksand', sans-serif;
 	background-color: yellow;
 	color: black;
 	font-size: 25px;
+}
+
+section.app {
+	border: 7px solid black;
+	position: absolute;
+	width: 200px;
+	height: 200px;
+	overflow: auto;
 }
