--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,3 @@
-* {
-	position: fixed;
-}
 body {
 	font-family: 'Quicksand', sans-serif;
 	background-color: yellow;
@@ -8,9 +5,48 @@ body {
 	font-size: 25px;
 }
 
+.buttons {
+	width: 600px;
+}
+
+#timestamp {
+	display: flex;
+	width: 300px;
+}
+
+#timestamp span {
+	justify-content: flex-start;
+}
+
+.wrapper {
+	display: flex;
+}
+
+#generate-male,
+#generate-female {
+	justify-content: flex-start;
+}
+
+.logo {
+	justify-content: flex-end;
+	border: 4px solid black;
+	background-color: black;
+	color: white;
+}
+
+#generate-male,
+#generate-female {
+	width: 200px;
+	height: auto;
+	letter-spacing: 2px;
+	border: 4px solid black;
+	color: black;
+	background-color: white;
+
+}
+
 section.app {
 	border: 7px solid black;
-	position: absolute;
 	width: 200px;
 	height: 200px;
 	overflow: auto;
