--- a/styles.css
+++ b/styles.css
@@ -1,53 +1,62 @@
 body {
 	font-family: 'Quicksand', sans-serif;
 	background-color: yellow;
-	color: black;
-	font-size: 25px;
 }
 
-.buttons {
-	width: 600px;
+main {
+	width: 50%;
+	font-size: 25px;
+	color: black;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 60px 10px 10px 10px;
 }
 
 #timestamp {
-	display: flex;
-	width: 300px;
+	font-size: 12px;
+	font-weight: bold;
 }
 
-#timestamp span {
-	justify-content: flex-start;
+#generate-male,
+#generate-female {
+	width: 50%;
+	min-height: 100px;
+	border: 12px solid black;
+	background-color: white;
+	color: black;
+	text-transform: uppercase;
+	font-weight: 700;
 }
 
 .wrapper {
 	display: flex;
-}
-
-#generate-male,
-#generate-female {
-	justify-content: flex-start;
+	justify-content: space-between;
 }
 
 .logo {
-	justify-content: flex-end;
-	border: 4px solid black;
+	width: 50%;
+	min-height: 80px;
+	border: 12px solid black;
 	background-color: black;
 	color: white;
+	text-transform: small-caps;
+	font-weight: 700;
+	margin-left: 26%;
+	font-size: 20px;
+	letter-spacing: 15px;
+	text-align: center;
 }
 
-#generate-male,
-#generate-female {
-	width: 200px;
-	height: auto;
-	letter-spacing: 2px;
-	border: 4px solid black;
-	color: black;
+.app {
+	width: 50%;
+	min-height: 100px;
+	margin-left: 26%;
+	border: 12px solid black;
 	background-color: white;
-
 }
 
-section.app {
-	border: 7px solid black;
-	width: 200px;
-	height: 200px;
-	overflow: auto;
+@supports (writing-mode:tb-rl) {
+	.author {
+		writing-mode:tb-rl;
+}
 }
