added background pattern

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 body {
 	font-family: 'Quicksand', sans-serif;
 	background-color: yellow;
-}
+	background-image: 'pattern.png';
+	}
 
 main {
 	width: 50%;
