--- a/styles.css
+++ b/styles.css
@@ -3,27 +3,20 @@ body {
 	background-color: yellow;
 	background-image: url(pattern.png);
 	background-blend-mode: difference;
+	font-size: 20px;
 	}
 
 main {
-	width: 50%;
-	font-size: 25px;
 	color: black;
-	margin-left: auto;
-	margin-right: auto;
-	padding: 60px 10px 10px 10px;
 }
 
 #timestamp {
-	font-size: 12px;
-	font-weight: bold;
+	font-weight: 700;
 }
 
 #generate-male,
 #generate-female {
-	width: 50%;
-	min-height: 100px;
-	border: 12px solid black;
+	border: 0.4em solid black;
 	background-color: white;
 	color: black;
 	text-transform: uppercase;
@@ -36,25 +29,30 @@ main {
 }
 
 .logo {
-	width: 50%;
-	min-height: 80px;
-	border: 12px solid black;
+	border: 0.4em solid black;
 	background-color: black;
 	color: white;
 	text-transform: small-caps;
 	font-weight: 700;
 	margin-left: 26%;
-	font-size: 20px;
 	letter-spacing: 15px;
 	text-align: center;
 }
 
 .app {
-	width: 50%;
-	min-height: 100px;
 	margin-left: 26%;
-	border: 12px solid black;
+	border: 0.4em solid black;
 	background-color: white;
+}
+
+.author {
+	position: absolute;
+	
+}
+
+.author a {
+	text-decoration: none;
+	color: black;
 }
 
 @supports (writing-mode:tb-rl) {
@@ -62,3 +60,70 @@ main {
 		writing-mode:tb-rl;
 }
 }
+
+@media only screen and (min-width : 320px) {
+	main {
+		width: 85%;
+		margin-top: 20px;
+		margin-right: auto;
+		margin-left: auto;
+		font-size: 3em;
+	}	
+	#timestamp {
+		font-size: 0.4em;
+	}
+	.footer {
+		position: relative;
+	}
+	.author {
+		position: absolute;
+		bottom: 27%;
+		left: 102%;
+	}
+
+	#generate-male,
+	#generate-female {
+		width: 65%;
+		min-height: 3em;
+		font-size: 1.3em;
+	}
+
+	.app {
+		min-height: 9em;
+		text-align: right;
+		padding: 15px;
+	}
+    }
+
+    /* Extra Small Devices, Phones */ 
+    @media only screen and (min-width : 480px) {
+
+    }
+
+    /* Small Devices, Tablets */
+    @media only screen and (min-width : 768px) {
+
+    }
+
+    /* Medium Devices, Desktops */
+    @media only screen and (min-width : 992px) {
+    	body {
+    		font-size: 50%;
+    	}
+    	
+    }
+
+    /* Large Devices, Wide Screens */
+    @media only screen and (min-width : 1200px) {
+
+    }
+
+
+
+
+
+
+
+
+
+
