--- a/coding-challenge/day5/styles.css
+++ b/coding-challenge/day5/styles.css
@@ -1,3 +1,67 @@
 body {
 	font-family: 'Roboto', sans-serif;
 }
+
+main {
+	width: 80%;
+	margin-bottom: 40px;
+	margin-top: 20px;
+	margin-right: auto;
+	margin-left: auto;
+}
+
+.letter {
+	width: 50px;
+	height: 50px;
+	border: 2px solid red;
+	background-color: blue;
+	font-size: 20px;
+	color: black;
+	text-align: center;
+	padding: 10px;
+	display: inline-block;
+}
+
+.playground {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	flex-wrap: wrap;
+	align-items: center;
+	align-content: space-around;
+}
+
+.keyboard {
+	width: 55%;
+	margin: 0 auto;
+}
+
+.row {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	flex-wrap: wrap;
+	align-items: center;
+	align-content: space-around;
+	margin-top: 5px;
+}
+
+.row::first-child {
+	margin-top: 0px;
+}
+
+.row button {
+	width: 30px;
+	height: 30px;
+	font-size: 14px;
+	padding: 5px;
+	text-align: center;
+	background-color: yellow;
+	color: black;
+	border: 2px solid blue;
+	margin-right: 5px;
+}
+
+.row button::last-child {
+	margin-right: 0px;
+}
