--- a/coding-challenge/day6-7/styles.css
+++ b/coding-challenge/day6-7/styles.css
@@ -5,35 +5,71 @@
 		font-family: 'Roboto', sans-serif;
 		font-weight: 400;
 	}
+	
+	/* Color palette */
+
+	body {
+		background-color: #b42b28;
+		color: #645C4B;
+		background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='80' height='80' viewBox='0 0 80 80'%3E%3Cg fill='%23562521' fill-opacity='0.46'%3E%3Cpath fill-rule='evenodd' d='M0 0h40v40H0V0zm40 40h40v40H40V40zm0-40h2l-2 2V0zm0 4l4-4h2l-6 6V4zm0 4l8-8h2L40 10V8zm0 4L52 0h2L40 14v-2zm0 4L56 0h2L40 18v-2zm0 4L60 0h2L40 22v-2zm0 4L64 0h2L40 26v-2zm0 4L68 0h2L40 30v-2zm0 4L72 0h2L40 34v-2zm0 4L76 0h2L40 38v-2zm0 4L80 0v2L42 40h-2zm4 0L80 4v2L46 40h-2zm4 0L80 8v2L50 40h-2zm4 0l28-28v2L54 40h-2zm4 0l24-24v2L58 40h-2zm4 0l20-20v2L62 40h-2zm4 0l16-16v2L66 40h-2zm4 0l12-12v2L70 40h-2zm4 0l8-8v2l-6 6h-2zm4 0l4-4v2l-2 2h-2z'/%3E%3C/g%3E%3C/svg%3E");
+	}
+
+	.eightball {
+		background-color: #92594B/*#001f3f*/;
+		/*border-color: #645C4B;*/
+	}
+
+	.eightball-answer {
+		background-color: #C8BCA3;
+		/*border-color: white;*/
+	}
+
+	mark {
+		background-color: #92594B;
+	}
+
+	.btn, .btn:link, .btn:visited {
+		background-color: #562521;
+		border-color: #B42B28;
+		color: #C8BCA3;
+	}
+
+	.btn:hover, .btn:focus {
+		background-color: #B42B28;
+		border-color: #92594B;
+		color: #562521;
+	}
+
+	/*end*/
 
 	.answer-text {
 		font-family: 'Amatic SC', cursive;
-		color: darkblue;
+		color: #645C4B;
 		font-size: 1.5em;
 		max-width: 80%;
 		text-align: center;
 	}
 
+
+
 	.eightball {
 		width: 20em;
 		height: 20em;
-		background-color: black;
 		clip-path: circle(50% at 50% 50%);
 		margin: 2em auto 0 auto;
-		border: 0.3em solid darkgrey;
-		border-radius: 50%;
+		/*border: 0.1em solid;
+		border-radius: 50%;*/
 		display: flex;
 		align-items: center;
 		justify-content: center;
 	}
 
 	.eightball-answer {
-		width: 50%;
-		height: 50%;
-		background-color: white;
+		width: 40%;
+		height: 40%;
 		clip-path: circle(50% at 50% 50%);
-		border: 0.3em solid darkblue;
-		border-radius: 50%;
+		/*border: 0.1em solid;
+		border-radius: 50%;*/
 		display: flex;
 		align-items: center;
 		justify-content: center;
@@ -49,7 +85,6 @@
 	  border-radius: 0.25em;
 	  border-style: solid;
 	  border-width: 1px;
-	  color: #111;
 	  display: inline-block;
 	  font-family: roboto, arial, sans-serif;
 	  letter-spacing: 0.15em;
@@ -62,36 +97,77 @@
 	}
 
 	.btn:hover, .btn:focus {
-	  color: #7FDBFF;
-	  border: 1px solid #7FDBFF;
+	  border: 1px solid;
 	  -webkit-transition: background-color 0.3s, color 0.3s, border 0.3s;
 	  transition: background-color 0.3s, color 0.3s, border 0.3s; 
 	}
 
-	.btn:active {
-	  color: #0074D9;
-	  border: 1px solid #0074D9;
-	  -webkit-transition: background-color 0.3s, color 0.3s, border 0.3s;
-	  transition: background-color 0.3s, color 0.3s, border 0.3s; 
-	}
 }
 
 /* tablet */
 @media only screen and (min-width : 768px) {
 
+	.eightball {
+		width: 15em;
+		height: 15em;
+	}
 
+	.question {
+		font-size: 0.8em;
+	}
+
+	.answer-text {
+		font-size: 1.1em;
+	}
+
+	.btn {
+		width: 10em;
+	}
 }
 
 /* desktop */
 @media only screen and (min-width : 1024px) {
 
+	.eightball {
+		width: 12em;
+		height: 12em;
+	}
+
+	.question {
+		font-size: 0.4em;
+	}
+
+	.answer-text {
+		font-size: 0.8em;
+	}
+
+	.btn {
+		width: 13em;
+		height: 3em;
+	}
 
 }
 
 /* wide screen or TV */
-@media only screen and (max-width : 1440px) {
+@media only screen and (min-width : 2560px) {
 
+	.eightball {
+		width: 25em;
+		height: 25em;
+	}
 
+	.question {
+		font-size: 1.2em;
+	}
+
+	.answer-text {
+		font-size: 1.8em;
+	}
+
+	.btn {
+		width: 13em;
+		height: 3em;
+	}
 
 }
 
